<resources>
    <string name="app_name">ViewAndLayout_10</string>
    <string name="header_picture">Header picture</string>
    <string name="email_input">Введите email</string>
    <string name="password_hint">Введите пароль</string>
    <string name="agreements_accept">Вы согласны на все наши условия!</string>
    <string name="login_button">Войти</string>
    <string name="anr_button">ANR Button</string>
    <string name="CallButtonText">Позвонить</string>
    <string name="editTextPhoneHint">Введите номер телефона</string>
</resources>